--- a/index.html
+++ b/index.html
@@ -6,10 +6,47 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Influencer Gear</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
+        integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 
 <body>
+    <header class="header-section margin">
+        <nav>
+            <div class="site-title">
+                <h2>Influencer products</h2>
+            </div>
+            <div class="nav-menu">
+                <ul>
+                    <li><a href=""></a>Home</li>
+                    <li><a href=""></a>Products</li>
+                    <li><a href=""></a>Sign up</li>
+                    <li><a href=""></a>Log In</li>
+                    <li><a href=""></a><i class="fa-solid fa-magnifying-glass"></i></li>
+                    <li><a href=""></a><i class="fa-solid fa-cart-shopping"></i></li>
+                </ul>
+            </div>
+        </nav>
 
+        <div class="hero-section">
+            <div class="hero-section-content">
+                <h1>Start your Journey as Influencer</h1>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sem vestibulum sed scelerisque eros. Lectus
+                    faucibus.</p>
+
+                <button>Preebook now <i class="fa-solid fa-arrow-right"></i></button>
+            </div>
+
+            <div class="hero-section-image">
+
+                <div class="hero-image">
+                    <img src="images/main-camera.png" alt="">
+                </div>
+
+            </div>
+        </div>
+    </header>
 </body>
 
 </html>
