mobile device responsive e-commerse section complete

--- a/index.html
+++ b/index.html
@@ -54,6 +54,19 @@
             </div>
         </div>
     </header>
+
+    <main>
+        <div class="e-commerce-site">
+            <div class="site-logo"><img src="logos/Alibaba.svg" alt=""></div>
+            <div class="site-logo"><img src="logos/Amazon.svg" alt=""></div>
+            <div class="site-logo"><img src="logos/Daraz.pk Logo.svg" alt=""></div>
+            <div class="site-logo"><img src="logos/Ebay.svg" alt=""></div>
+            <div class="site-logo"><img src="logos/Rakuten.svg" alt=""></div>
+            <div class="site-logo"><img src="logos/Target.svg" alt=""></div>
+            <div class="site-logo"><img src="logos/Walmart.svg" alt=""></div>
+
+        </div>
+    </main>
 </body>
 
 </html>
