--- a/index.html
+++ b/index.html
@@ -66,7 +66,163 @@
             <div class="site-logo"><img src="logos/Walmart.svg" alt=""></div>
 
         </div>
+
+        <div class="popular-collection">
+            <h3>Popular Collection</h3>
+
+
+            <div class="popular-collection-card">
+                <div class="product-card">
+                    <img src="images/tripod.png" alt="">
+                    <h4>Flex Tripod</h4>
+                    <h5>$50.48</h5>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star-half-stroke"></i>
+                    <span>4.99</span>
+                    <p>Wordwide shifting available
+                        Buyers protection possible!</p>
+                </div>
+                <div class="product-card">
+                    <img src="images/mic.png" alt="">
+                    <h4>Microphone</h4>
+                    <h5>$50.48</h5>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star-half-stroke"></i>
+                    <span>4.99</span>
+                    <p>Wordwide shifting available
+                        Buyers protection possible!</p>
+                </div>
+                <div class="product-card">
+                    <img src="images/airpod.png" alt="">
+                    <h4>Airbuds</h4>
+                    <h5>$50.48</h5>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star-half-stroke"></i>
+                    <span>4.99</span>
+                    <p>Wordwide shifting available
+                        Buyers protection possible!</p>
+                </div>
+                <div class="product-card">
+                    <img src="images/drone.png" alt="">
+                    <h4>Drone</h4>
+                    <h5>$50.48</h5>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star-half-stroke"></i>
+                    <span>4.99</span>
+                    <p>Wordwide shifting available
+                        Buyers protection possible!</p>
+                </div>
+                <div class="product-card">
+                    <img src="images/lights.png" alt="">
+                    <h4>Light Setup</h4>
+                    <h5>$50.48</h5>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star-half-stroke"></i>
+                    <span>4.99</span>
+                    <p>Wordwide shifting available
+                        Buyers protection possible!</p>
+                </div>
+                <div class="product-card">
+                    <img src="images/setup.png" alt="">
+                    <h4>Photoshoot set</h4>
+                    <h5>$50.48</h5>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star-half-stroke"></i>
+                    <span>4.99</span>
+                    <p>Wordwide shifting available
+                        Buyers protection possible!</p>
+                </div>
+                <div class="product-card">
+                    <img src="images/camera.png" alt="">
+                    <h4>Vlogging Camera</h4>
+                    <h5>$50.48</h5>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star-half-stroke"></i>
+                    <span>4.99</span>
+                    <p>Wordwide shifting available
+                        Buyers protection possible!</p>
+                </div>
+                <div class="product-card">
+                    <img src="images/single-light.png" alt="">
+                    <h4>Green Screen</h4>
+                    <h5>$50.48</h5>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star-half-stroke"></i>
+                    <span>4.99</span>
+                    <p>Wordwide shifting available
+                        Buyers protection possible!</p>
+                </div>
+                <div class="product-card">
+                    <img src="images/action.png" alt="">
+                    <h4>Action Camera</h4>
+                    <h5>$50.48</h5>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star-half-stroke"></i>
+                    <span>4.99</span>
+                    <p>Wordwide shifting available
+                        Buyers protection possible!</p>
+                </div>
+
+            </div>
+            <span class="see-more">See More <i class="fa-solid fa-arrow-right"></i></span>
+        </div>
+
+        <div class="featured-products">
+            <div class="product-image">
+                <img src="images/gear.png" alt="">
+            </div>
+            <div class="product-content">
+                <h2>Featured products at one place</h2>
+                <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat
+                    duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet. </p>
+                <button class="btn">Join Now <i class="fa-solid fa-arrow-right"></i> </button>
+            </div>
+        </div>
     </main>
+
+    <footer>
+
+        <div class="footer-section">
+            <h3>Influencer products</h3>
+
+            <h5>Copyright &copy;2025 influencer product</h5>
+            <h5>All rights reserved</h5>
+            <div class="socal-icon">
+                <i class="fa-brands fa-instagram"></i>
+                <i class="fa-solid fa-globe"></i>
+                <i class="fa-brands fa-twitter"></i>
+                <i class="fa-brands fa-youtube"></i>
+            </div>
+        </div>
+
+    </footer>
 </body>
 
 </html>
